[gd_scene load_steps=5 format=3 uid="uid://r3uwdi3qowva"]

[ext_resource type="Script" path="res://timeseriesTab.gd" id="1_fbobd"]
[ext_resource type="Script" path="res://Line2D.gd" id="2_ng5kt"]
[ext_resource type="Texture2D" uid="uid://ct5d8tywlr5sb" path="res://sprites/Plus.png" id="3_8yh3t"]
[ext_resource type="Texture2D" uid="uid://rjx1xtrv5qrj" path="res://sprites/Minus.png" id="4_d3chi"]

[node name="timeseriesTabHolder" type="MarginContainer"]
offset_right = 85.0
offset_bottom = 222.0
script = ExtResource("1_fbobd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="StreamButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Stream"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlotBox1" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PlotBackground1" type="ColorRect" parent="VBoxContainer/VBoxContainer/HBoxContainer/PlotBox1"]
layout_mode = 2

[node name="Line1" type="Line2D" parent="VBoxContainer/VBoxContainer/HBoxContainer/PlotBox1"]
script = ExtResource("2_ng5kt")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Channel1Plus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
icon = ExtResource("3_8yh3t")
icon_alignment = 1
expand_icon = true

[node name="MiddlePadding1" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Channel1Minus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
icon = ExtResource("4_d3chi")
icon_alignment = 1
expand_icon = true

[node name="ChannelNameBox1" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ChannelName1" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/ChannelNameBox1"]
layout_mode = 2
text = "Channel 1"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlotBox2" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PlotBox2"]
layout_mode = 2

[node name="Line2" type="Line2D" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PlotBox2"]
script = ExtResource("2_ng5kt")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Channel2Plus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_8yh3t")
icon_alignment = 1
expand_icon = true

[node name="MiddlePadding2" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Channel2Minus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_d3chi")
icon_alignment = 1
expand_icon = true

[node name="ChannelNameBox2" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ChannelName2" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2/ChannelNameBox2"]
layout_mode = 2
text = "Channel 2"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlotBox3" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="PlotBackground3" type="ColorRect" parent="VBoxContainer/VBoxContainer/HBoxContainer3/PlotBox3"]
layout_mode = 2

[node name="Line3" type="Line2D" parent="VBoxContainer/VBoxContainer/HBoxContainer3/PlotBox3"]
script = ExtResource("2_ng5kt")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Channel3Plus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_8yh3t")
icon_alignment = 1
expand_icon = true

[node name="MiddlePadding3" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="Channel3Minus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_d3chi")
icon_alignment = 1
expand_icon = true

[node name="ChannelNameBox3" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="ChannelName3" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer3/ChannelNameBox3"]
layout_mode = 2
text = "Channel 3"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlotBox4" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="PlotBackground4" type="ColorRect" parent="VBoxContainer/VBoxContainer/HBoxContainer4/PlotBox4"]
layout_mode = 2

[node name="Line4" type="Line2D" parent="VBoxContainer/VBoxContainer/HBoxContainer4/PlotBox4"]
script = ExtResource("2_ng5kt")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Channel4Plus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_8yh3t")
icon_alignment = 1
expand_icon = true

[node name="MiddlePadding4" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2

[node name="Channel4Minus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_d3chi")
icon_alignment = 1
expand_icon = true

[node name="ChannelNameBox4" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="ChannelName4" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer4/ChannelNameBox4"]
layout_mode = 2
text = "Channel 4"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlotBox5" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2

[node name="PlotBackground5" type="ColorRect" parent="VBoxContainer/VBoxContainer/HBoxContainer5/PlotBox5"]
layout_mode = 2

[node name="Line5" type="Line2D" parent="VBoxContainer/VBoxContainer/HBoxContainer5/PlotBox5"]
script = ExtResource("2_ng5kt")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Channel5Plus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer5/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_8yh3t")
icon_alignment = 1
expand_icon = true

[node name="MiddlePadding5" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer5/VBoxContainer"]
layout_mode = 2

[node name="Channel5Minus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer5/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_d3chi")
icon_alignment = 1
expand_icon = true

[node name="ChannelNameBox5" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2

[node name="ChannelName5" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer5/ChannelNameBox5"]
layout_mode = 2
text = "Channel 5"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlotBox6" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2

[node name="PlotBackground6" type="ColorRect" parent="VBoxContainer/VBoxContainer/HBoxContainer6/PlotBox6"]
layout_mode = 2

[node name="Line6" type="Line2D" parent="VBoxContainer/VBoxContainer/HBoxContainer6/PlotBox6"]
script = ExtResource("2_ng5kt")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Channel6Plus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer6/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_8yh3t")
icon_alignment = 1
expand_icon = true

[node name="MiddlePadding6" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer6/VBoxContainer"]
layout_mode = 2

[node name="Channel6Minus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer6/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_d3chi")
icon_alignment = 1
expand_icon = true

[node name="ChannelNameBox6" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2

[node name="ChannelName6" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer6/ChannelNameBox6"]
layout_mode = 2
text = "Channel 6"

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlotBox7" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2

[node name="PlotBackground7" type="ColorRect" parent="VBoxContainer/VBoxContainer/HBoxContainer7/PlotBox7"]
layout_mode = 2

[node name="Line7" type="Line2D" parent="VBoxContainer/VBoxContainer/HBoxContainer7/PlotBox7"]
script = ExtResource("2_ng5kt")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Channel7Plus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer7/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_8yh3t")
icon_alignment = 1
expand_icon = true

[node name="MiddlePadding7" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer7/VBoxContainer"]
layout_mode = 2

[node name="Channel7Minus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer7/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_d3chi")
icon_alignment = 1
expand_icon = true

[node name="ChannelNameBox7" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2

[node name="ChannelName7" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer7/ChannelNameBox7"]
layout_mode = 2
text = "Channel 7"

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlotBox8" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2

[node name="PlotBackground8" type="ColorRect" parent="VBoxContainer/VBoxContainer/HBoxContainer8/PlotBox8"]
layout_mode = 2

[node name="Line8" type="Line2D" parent="VBoxContainer/VBoxContainer/HBoxContainer8/PlotBox8"]
script = ExtResource("2_ng5kt")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Channel8Plus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer8/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_8yh3t")
icon_alignment = 1
expand_icon = true

[node name="MiddlePadding8" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer8/VBoxContainer"]
layout_mode = 2

[node name="Channel8Minus" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer8/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_d3chi")
icon_alignment = 1
expand_icon = true

[node name="ChannelNameBox8" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2

[node name="ChannelName8" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer8/ChannelNameBox8"]
layout_mode = 2
text = "Channel 8"

[connection signal="button_down" from="VBoxContainer/StreamButton" to="." method="_on_stream_button_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Channel1Plus" to="." method="_on_channel_1_plus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Channel1Minus" to="." method="_on_channel_1_minus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Channel2Plus" to="." method="_on_channel_2_plus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Channel2Minus" to="." method="_on_channel_2_minus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer/Channel3Plus" to="." method="_on_channel_3_plus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer3/VBoxContainer/Channel3Minus" to="." method="_on_channel_3_minus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer4/VBoxContainer/Channel4Plus" to="." method="_on_channel_4_plus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer4/VBoxContainer/Channel4Minus" to="." method="_on_channel_4_minus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer5/VBoxContainer/Channel5Plus" to="." method="_on_channel_5_plus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer5/VBoxContainer/Channel5Minus" to="." method="_on_channel_5_minus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer6/VBoxContainer/Channel6Plus" to="." method="_on_channel_6_plus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer6/VBoxContainer/Channel6Minus" to="." method="_on_channel_6_minus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer7/VBoxContainer/Channel7Plus" to="." method="_on_channel_7_plus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer7/VBoxContainer/Channel7Minus" to="." method="_on_channel_7_minus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer8/VBoxContainer/Channel8Plus" to="." method="_on_channel_8_plus_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/HBoxContainer8/VBoxContainer/Channel8Minus" to="." method="_on_channel_8_minus_button_down"]
